Fix text overflow in table

--- a/less/components/tables.less
+++ b/less/components/tables.less
@@ -29,6 +29,7 @@ th {
                 line-height: @gb-line-height-base;
                 vertical-align: top;
                 border-top: 1px solid @gb-table-border-color;
+                word-break: break-all;
             }
         }
     }
